--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,9 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <footer>
+      <p>Doug</p>
+    </footer>
   </body>
 </html>
