--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>hello-world</title>
   </head>
   <body>
@@ -14,8 +15,11 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
 
+   <div class="footer"></div> 
     <footer>
       <p>Doug</p>
     </footer>
+  </div>
+    </body>
   </body>
 </html>
