--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,29 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  <title>hello-world</title>
+  <title>Welcome to the Amiibo App!</title>
 </head>
 
 <body>
-  
+  <nav class="navbar  navbar-default"  role="navigation">
+    <div class="navbar-header">
+      <button class="navbar-toggle"
+        data-toggle="collapse" data-target="#example-navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Amiibo</a>
+    </div>
+      <div class="collapse navbar-collapse " id="example-navbar-collapse">
+      <ul class="nav navbar-nav" >
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">Browse</a></li>
+        <li><a href="#">Blog</a></li>
+      </ul>
+    </div>
+  </nav>
 
   <noscript>
     <strong>We're sorry but hello-world doesn't work properly without JavaScript enabled. Please enable it to
@@ -22,6 +40,37 @@
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
+  <footer class="footer-distributed">
+
+    <div class="footer-right">
+
+      <a href="#"><i class="fa fa-facebook"></i></a>
+      <a href="#"><i class="fa fa-twitter"></i></a>
+      <a href="#"><i class="fa fa-linkedin"></i></a>
+      <a href="#"><i class="fa fa-github"></i></a>
+
+    </div>
+
+    <div class="footer-left">
+
+      <p class="footer-links">
+        <a class="link-1" href="#">Home</a>
+
+        <a href="#">Blog</a>
+
+        <a href="#">Pricing</a>
+
+        <a href="#">About</a>
+
+        <a href="#">Faq</a>
+
+        <a href="#">Contact</a>
+      </p>
+
+      <p>Company Name &copy; 2015</p>
+    </div>
+
+  </footer>
 </body>
 </body>
 
