--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <nav class="navbar  navbar-default"  role="navigation">
+  <nav class="navbar navbar-default"  role="navigation">
     <div class="navbar-header">
       <button class="navbar-toggle"
         data-toggle="collapse" data-target="#example-navbar-collapse">
@@ -23,11 +23,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Amiibo</a>
+      <a class="navbar-brand" href=<router-link to=/Amiibo></router-link>Amiibo</a>
     </div>
       <div class="collapse navbar-collapse " id="example-navbar-collapse">
       <ul class="nav navbar-nav" >
-        <li class="active"><a href="#">Home</a></li>
+        <li class="active"><a href=<router-link to=/Amiibo></router-link>Home</a></li>
         <li><a href="#">Browse</a></li>
         <li><a href="#">Blog</a></li>
       </ul>
@@ -44,10 +44,8 @@
 
     <div class="footer-right">
 
-      <a href="#"><i class="fa fa-facebook"></i></a>
-      <a href="#"><i class="fa fa-twitter"></i></a>
-      <a href="#"><i class="fa fa-linkedin"></i></a>
-      <a href="#"><i class="fa fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/douglas-jones-5a161566/"><i class="fa fa-linkedin"></i></a>
+      <a href="https://github.com/DougJones866"><i class="fa fa-github"></i></a>
 
     </div>
 
@@ -55,19 +53,10 @@
 
       <p class="footer-links">
         <a class="link-1" href="#">Home</a>
-
-        <a href="#">Blog</a>
-
-        <a href="#">Pricing</a>
-
-        <a href="#">About</a>
-
-        <a href="#">Faq</a>
-
         <a href="#">Contact</a>
       </p>
 
-      <p>Company Name &copy; 2015</p>
+      <p>Douglas Jones &copy; 2019</p>
     </div>
 
   </footer>
