--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,7 @@
       <div class="collapse navbar-collapse " id="example-navbar-collapse">
       <ul class="nav navbar-nav" >
         <li class="active"><a href=<router-link to=/Amiibo></router-link>Home</a></li>
-        <li><a href="#">Browse</a></li>
-        <li><a href="#">Blog</a></li>
+        <li><a href="#">About</a></li>
       </ul>
     </div>
   </nav>
