--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,24 @@
 
 <body>
   
+  <nav class="navbar navbar-default"  role="navigation">
+    <div class="navbar-header">
+      <button class="navbar-toggle"
+        data-toggle="collapse" data-target="#example-navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href=<router-link to=/Amiibo></router-link>Amiibo</a>
+    </div>
+      <div class="collapse navbar-collapse " id="example-navbar-collapse">
+      <ul class="nav navbar-nav" >
+        <li class="active"><a href=<router-link to=/Amiibo></router-link>Home</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </div>
+  </nav>
 
   <noscript>
     <strong>We're sorry but hello-world doesn't work properly without JavaScript enabled. Please enable it to
