--- a/public/index.html
+++ b/public/index.html
@@ -11,28 +11,22 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <title>Welcome to the Amiibo App!</title>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146850568-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-146850568-1');
+</script>
+
+
 </head>
 
 <body>
+    
   
-  <nav class="navbar navbar-default"  role="navigation">
-    <div class="navbar-header">
-      <button class="navbar-toggle"
-        data-toggle="collapse" data-target="#example-navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href=<router-link to=/Amiibo></router-link>Amiibo</a>
-    </div>
-      <div class="collapse navbar-collapse " id="example-navbar-collapse">
-      <ul class="nav navbar-nav" >
-        <li class="active"><a href=<router-link to=/Amiibo></router-link>Home</a></li>
-        <li><a href="#">About</a></li>
-      </ul>
-    </div>
-  </nav>
 
   <noscript>
     <strong>We're sorry but hello-world doesn't work properly without JavaScript enabled. Please enable it to
@@ -40,6 +34,8 @@
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
+
+
   <footer class="footer-distributed">
 
     <div class="footer-right">
