--- a/public/index.html
+++ b/public/index.html
@@ -11,22 +11,30 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <title>Welcome to the Amiibo App!</title>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146850568-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146850568-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-146850568-1');
-</script>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-146850568-1');
+  </script>
 
 
 </head>
 
 <body>
-    
-  
+
+    <div class="topnav">
+        <a class="active" href="/">Home</a>
+        <a href="https://github.com/DougJones866">Github</a>
+        <a href="https://www.linkedin.com/in/douglas-jones-5a161566/">Linkedin</a>
+        <a href="#about">About</a>
+      </div>
 
   <noscript>
     <strong>We're sorry but hello-world doesn't work properly without JavaScript enabled. Please enable it to
